# jpg2xlsx

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  jpg2xls.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: bump-version.yml  publish-package.yml  test.yml
src/jpg2xlsx/: __init__.py  cli.py  converter.py
tests/: test_cli.py  test_converter.py
